[package]
name = "file-securer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auto-launch = "0.4.0"
base64 = "0.21.0"
directories = "4.0.1"
image = "0.24.5"
notify = "5.1.0"
open = "3.4.0"

[dependencies.windows]
version = "0.44.0"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]
